# shadow-reth

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  book.toml  shadow.json  shadow.json.example
.github/: pr-title-checker-config.json
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: pr-title-checker.yml  test-rs.yml
crates/common/: Cargo.toml
crates/common/src/: db.rs  hex.rs  lib.rs  types.rs
crates/exex/: Cargo.toml  README.md
crates/exex/src/: contracts.rs  db.rs  execution.rs  lib.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc/src/: lib.rs  shadow_logs_query.rs
crates/rpc/src/apis/: get_logs.rs  mod.rs  subscribe.rs  types.rs
