[workspace]
members = ["bin/shadow-reth", "crates/common", "crates/exex", "crates/rpc"]
default-members = ["bin/shadow-reth"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
description = "A single-node implementation of a Shadow RPC on top of Reth, utilizing ExEx and custom RPC methods."
version = "0.1.0"
edition = "2021"
homepage = "https://app.shadow.xyz"
repository = "https://github.com/shadow-hq/shadow-reth"
keywords = ["ethereum", "web3", "evm", "exex", "reth", "shadow"]
exclude = [".github/"]
rust-version = "1.76"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "thin"
strip = "debuginfo"

# Like release, but with full debug symbols. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "release"
strip = "none"
debug = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
collection_is_never_read = "allow"
debug_assert_with_mut_call = "allow"
empty_line_after_doc_comments = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
iter_on_single_items = "allow"
missing_const_for_fn = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
string_lit_as_bytes = "allow"
type_repetition_in_bounds = "allow"
unnecessary_struct_initialization = "allow"
use_self = "allow"

[workspace.dependencies]
# Shadow
shadow-reth = { path = "bin/shadow-reth" }
shadow-reth-exex = { path = "crates/exex" }
shadow-reth-rpc = { path = "crates/rpc" }
shadow-reth-common = { path = "crates/common" }

# Reth
reth = { git = "https://github.com/paradigmxyz/reth.git", rev = "d777d5f" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git", rev = "d777d5f" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "d777d5f" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "d777d5f" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "d777d5f" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "d777d5f" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", rev = "d777d5f" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "d777d5f" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "d777d5f" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "d777d5f" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "d777d5f" }

# Crates.io
eyre = "0.6.12"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.30"
tracing = "0.1.40"
serde = "1.0.203"
serde_json = "1.0.117"

# RPC
jsonrpsee = "0.22.5"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }

[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
revm-interpreter = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
revm-precompile = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
