[package]
name = "shadow-reth-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Reth
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-node-ethereum.workspace = true
reth-primitives.workspace = true
reth-tracing.workspace = true

# Revm
revm.workspace = true
revm-primitives.workspace = true
revm-inspectors.workspace = true

# Crates
eyre.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true