[package]
name = "shadow-reth-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Reth
reth-primitives.workspace = true
reth-tracing.workspace = true

# Crates
eyre.workspace = true
serde.workspace = true
sqlx.workspace = true
