[package]
name = "shadow-reth-exex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Shadow
shadow-reth-common.workspace = true

# Reth
reth-evm-ethereum.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-tracing.workspace = true
reth-revm.workspace = true
revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", rev = "ed5450e" }

# Crates
eyre.workspace = true
tokio.workspace = true
futures.workspace = true
serde_json.workspace = true
