[package]
name = "shadow-reth-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Shadow
shadow-reth-common.workspace = true

# Reth
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-tracing.workspace = true

# Crates
eyre.workspace = true
tokio.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
sqlx.workspace = true
